; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_fsync_dir.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_futils.c_git_futils_fsync_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDONLY = common dso_local global i32 0, align 4
@GIT_ERROR_OS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"failed to open directory '%s' for fsync\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"failed to fsync directory '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_futils_fsync_dir(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 -1, i32* %5, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @O_RDONLY, align 4
  %8 = call i32 @p_open(i8* %6, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @GIT_ERROR_OS, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @git_error_set(i32 %11, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i8* %12)
  store i32 -1, i32* %2, align 4
  br label %26

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @p_fsync(i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i32, i32* @GIT_ERROR_OS, align 4
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @git_error_set(i32 %19, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  br label %22

22:                                               ; preds = %18, %14
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @p_close(i32 %23)
  %25 = load i32, i32* %5, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %22, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @p_open(i8*, i32) #1

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1

declare dso_local i32 @p_fsync(i32) #1

declare dso_local i32 @p_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
